Fix code and src font size and wrap

--- a/note/style.css
+++ b/note/style.css
@@ -10,13 +10,12 @@ code, .example, .src {
     overflow-x: scroll;
 }
 
-.src {
+code, .src {
     font-size: 12pt;
 }
 
 code {
-    font-size: 14.5pt;
-    white-space: nowrap;
+    white-space: auto;
 }
 
 span.tag span {
